PLC/TPs/TP2/gramatica.txt
programa      : plc

plc           : PLC ID declaracoes BEGIN comandos END 

comentarios   : '//' texto
              | '/*' texto '*/'

declaracoes   : declaracao
              | declaracoes declaracao

declaracao    : ID SEMICOLON              # variavel sem valor inicial vai ser 0 LUIS CHEKA SE ISTO É VERDADE ON GOD
              | ID ASSIGN INTEGER SEMICOLON
              | ID ASSIGN leitura 
                

comandos      : comando 
              | comandos comando 

comando       : atribuicao
              | leitura
              | escrita
              | selecao
              | repeticao


atribuicao    : ID ASSIGN expressao SEMICOLON
              | ID ASSIGN leitura SEMICOLON

leitura       : READ LBRACKET texto RBRACKET SEMICOLON

escrita       : WRITE LBRACKET argumento RBRACKET SEMICOLON

argumento     : expressao
              | texto

selecao       : IF condicao ':' comandos END
              | IF condicao ':' comandos  ELSE comandos END

repeticao     : FOR LBRACKET declaracao SEMICOLON condicao SEMICOLON incrementação RBRACKET ':' comando END
              | WHILE LBRACKET condicao RBRACKET ':' comandos END


expressao     : termo
              | expressao PLUS termo 
              | expressao MINUS termo

termo         : fator 
              | termo TIMES fator 
              | termo DIVIDE fator

texto         : '"' STRING '"'
              |


!!!!! no for loop nao tenho a certeza dar check dps !!!!

condicao      : expressao operador expressao

incrementacao : ID INCREMENT
              | ID DECREMENT

operador      : GT
              | LT 
              | GE 
              | LE 
              | EQ 
              | JUNGLE_DIFF
              | OR
              | AND

funcaoAux     : FUNCTION ID ':' INTEGER BEGIN comandos RETURN expressao SEMICOLON END

fator         : ID
              | ID LBRACKET RBRACKET
              | NUMERO
              | LBRACKET expressao RBRACKET
